@@ -62,6 +62,8 @@ Version CVS HEAD (?)
     based on any dimension, not only the 'layer' dimension.
   * 'Dimension Manager' dialog: show dialog window with at least 460x300px on
     initial usage (was far too small by default).
+  * File Property Dialog: allow viewing and altering the Giga file format
+    version (by combo box).
 
 Version 0.2.0 (2009-07-31)
 
